--- a/01. React-기초/frontend/public/styles/main.css
+++ b/01. React-기초/frontend/public/styles/main.css
@@ -1,10 +1,2 @@
-/* CSS 스타일 분기 (조건 처리) */
-
-/* .no-js body {
-  background-color: red;
-  color: white;
-}
-
-.js body {
-  background-color: white;
-} */
+@import './_base.css';
+@import './_layout.css';
